--- a/properties/server.properties
+++ b/properties/server.properties
@@ -16,7 +16,7 @@ snooper-enabled=true
 level-type=DEFAULT
 hardcore=false
 enable-command-block=false
-max-players=20
+max-players=200
 network-compression-threshold=256
 resource-pack-sha1=
 max-world-size=29999984
@@ -35,4 +35,4 @@ max-build-height=256
 level-seed=
 use-native-transport=true
 enable-rcon=false
-motd=A Minecraft Server
+motd=MC-BKMS 24/7 LIFE TIME
